test/tests/errors/error-for-step-not-int3.sm
// true
// false
/**/
/**/

program {
    var x = 0;
    for (x = 0 while x) {}
}